<resources>
    <string name="app_name">Matur</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="type_message">Type a Message</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="label_matur">Matur</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_save">SAVE</string>
    <string name="back">back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="logout">Logout</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="loading_chat_list">Loading chat list…</string>
</resources>