<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/varela_round_regular"
        android:text="@string/label_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="name"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/varela_round_regular"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="name"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/varela_round_regular"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="name"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/varela_round_regular"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="name"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/varela_round_regular"
        android:hint="@string/enter_confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/btn_sign_up"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/btn_login"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>