<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgBack"
            android:contentDescription="@string/label_profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/varela_round_regular"
            android:text="@string/label_profile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/varela_round_regular"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="haizk" />

            <EditText
                android:inputType="text"
                android:id="@+id/etEditUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_profile"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/varela_round_regular"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone"
                android:autofillHints="username"
                tools:text="haizk" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:backgroundTint="@color/colorLightYellow"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:backgroundTint="@color/colorLightRed"/>

</LinearLayout>